project(phastaIO)
cmake_minimum_required(VERSION 2.8)
enable_language(CXX)
enable_language(Fortran)
find_package(MPI REQUIRED)
include_directories(${MPI_C_INCLUDE_PATH})
# collect all the source files
include(FortranCInterface)
FortranCInterface_VERIFY(CXX)
FortranCInterface_Header(FCMangle.h)
include_directories("${phastaIO_BINARY_DIR}")
add_definitions(-DMPICH_SKIP_MPICXX)
add_definitions(-DOMPI_SKIP_MPICXX=1)
set(SRC_FILES phastaIO.cc)

ADD_LIBRARY(phastaIO ${SRC_FILES})
target_link_libraries(phastaIO ${MPI_C_LIBRARIES})

add_library(sphastaIO sphastaIO.cpp)
target_link_libraries(sphastaIO ${MPI_C_LIBRARIES})
